# xlstm

./: .gitignore  README_FIX_RUST.md
rust/: Cargo.toml  README_PERFORMANCE.md  Shakespeare.txt  xlstm_chat_model_gpu.mpk
rust/old/: xlstm_chat_model_gpu.mpk
rust/src/: lib.rs  main.rs  xlstm_block_stack.rs  xlstm_lm_model.rs
rust/src/blocks/: mod.rs  xlstm_block.rs
rust/src/blocks/mlstm/: backends.rs  block.rs  cell.rs  layer.rs  mod.rs
rust/src/blocks/slstm/: block.rs  cell.rs  layer.rs  mod.rs
rust/src/blocks/xlstm_large/: backends.rs  components.rs  config.rs  layer.rs  mod.rs  model.rs
rust/src/components/: conv.rs  feedforward.rs  init.rs  linear_headwise.rs  ln.rs  mod.rs
rust/xorIA/: block.rs  comp.txt  large_chat.rs  large_chat_cuda.rs  lib.rs  mingru.rs  mingruchat.rs  mlstm.rs  mlstm1.rs  mlstm_mingru_chat.rs  model.rs  msltmchat (cuda).rs  msltmchat (webgpu).rs  msltmchat.rs  pro_trainer.rs  slstm.rs  slstmchat.rs  wiki_mlstm.rs  xlstmchat.rs
tests/: mlstm_copy_test.py  mlstm_equivalence.py  mlstm_grad_stability.py  mlstm_stability_test.py  slstm_equivalence.py  test_conv.py  test_cumsum.py
xlstm/blocks/mlstm/: backends.py
xlstm/components/: conv.py
