[package]
name = "xlstm"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
burn = { version = "0.16.1", features = ["ndarray", "wgpu", "autodiff", "train"] }
burn-autodiff = "0.16.1"
burn-ndarray = "0.16.1"
burn-wgpu = "0.16.1"
tokenizers = "0.20"
rand = "0.9"
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "msltmchat"
path = "xorIA/msltmchat.rs"

[[bin]]
name = "slstmchat"
path = "xorIA/slstmchat.rs"

[[bin]]
name = "msltmchat_gpu"
path = "xorIA/msltmchat (webgpu).rs"

[[bin]]
name = "xlstm-demo"
path = "src/main.rs"

[[bin]]
name = "mlstm_equivalence"
path = "xorIA/bin/mlstm_equivalence.rs"
