[package]
name = "xlstm"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
burn = { version = "0.16.1", features = ["ndarray", "wgpu", "autodiff", "train"] }
burn-autodiff = "0.16.1"
burn-ndarray = "0.16.1"
burn-wgpu = "0.16.1"
tokenizers = "0.20"
rand = "0.9"
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "msltmchat"
path = "xorIA/msltmchat.rs"

[[bin]]
name = "slstmchat"
path = "xorIA/slstmchat.rs"

[[bin]]
name = "msltmchat_gpu"
path = "xorIA/msltmchat (webgpu).rs"

[[bin]]
name = "xlstm-demo"
path = "src/main.rs"

[[bin]]
name = "mlstm_equivalence"
path = "xorIA/bin/mlstm_equivalence.rs"


[[bin]]
name = "test_cumsum"
path = "xorIA/bin/test_cumsum.rs"



[[bin]]
name = "test_conv"
path = "xorIA/bin/test_conv.rs"



[[bin]]
name = "slstm_equivalence"
path = "xorIA/bin/slstm_equivalence.rs"



[[bin]]
name = "pro_trainer"
path = "xorIA/pro_trainer.rs"



[[bin]]
name = "mlstm_stability"
path = "xorIA/bin/mlstm_stability.rs"



[[bin]]
name = "mlstm_grad_stability"
path = "xorIA/bin/mlstm_grad_stability.rs"



[[bin]]
name = "mlstm_copy_test"
path = "xorIA/bin/mlstm_copy_test.rs"



[[bin]]
name = "burn_comparison"
path = "xorIA/bin/burn_device_comparison.rs"

[[bin]]
name = "wiki_mlstm"
path = "xorIA/wiki_mlstm.rs"

