[package]
name = "xlstm"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
burn = { version = "0.20.1", features = ["ndarray", "wgpu", "autodiff", "train"] }
burn-autodiff = "0.20.1"
burn-ndarray = "0.20.1"
burn-wgpu = "0.20.1"
burn-cuda = "0.20.1"
tokenizers = "0.20"
rand = "0.9"
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "large_chat"
path = "xorIA/large_chat.rs"

[[bin]]
name = "msltmchat"
path = "xorIA/msltmchat.rs"

[[bin]]
name = "slstmchat"
path = "xorIA/slstmchat.rs"

[[bin]]
name = "msltmchat_gpu"
path = "xorIA/msltmchat (webgpu).rs"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "mlstm_equivalence"
path = "xorIA/bin/mlstm_equivalence.rs"


[[bin]]
name = "test_cumsum"
path = "xorIA/bin/test_cumsum.rs"



[[bin]]
name = "test_conv"
path = "xorIA/bin/test_conv.rs"



[[bin]]
name = "slstm_equivalence"
path = "xorIA/bin/slstm_equivalence.rs"



[[bin]]
name = "pro_trainer"
path = "xorIA/pro_trainer.rs"



[[bin]]
name = "mlstm_stability_test"
path = "xorIA/bin/mlstm_stability.rs"



[[bin]]
name = "mlstm_grad_stability"
path = "xorIA/bin/mlstm_grad_stability.rs"



[[bin]]
name = "mlstm_copy_test"
path = "xorIA/bin/mlstm_copy_test.rs"



[[bin]]
name = "burn_comparison"
path = "xorIA/bin/burn_device_comparison.rs"

[[bin]]
name = "wiki_mlstm"
path = "xorIA/wiki_mlstm.rs"

[[bin]]
name = "msltmchat_cuda"
path = "xorIA/msltmchat (cuda).rs"

[[bin]]
name = "dual_test"
path = "xorIA/bin/dual_test.rs"

[[bin]]
name = "test_mingru"
path = "xorIA/bin/test_mingru.rs"

[[bin]]
name = "test_slstm"
path = "xorIA/bin/test_slstm.rs"
